# handlebars-template-handler

./: Cargo.toml  search-index.js
examples/: server.rs
examples/templates/: index.hbs
handlebars_template_handler/: index.html  sidebar-items.js  struct.TemplateHandler.html
implementors/iron/middleware/: trait.Handler.js
src/: lib.rs
src/handlebars_template_handler/src/: lib.rs.html
