[package]
name = "handlebars-template-handler"
version = "0.1.1-pre"
authors = ["Ning Sun <sunng@about.me>"]
description = "Handlebars templating middleware for Iron."
license = "MIT"
keywords = ["handlebars", "templating", "web", "webdev", "iron"]
homepage = "https://github.com/sunng87/handlebars-template-handler"
repository = "https://github.com/sunng87/handlebars-template-handler"
documentation = "http://sunng87.github.io/handlebars-template-handler/"


[dependencies]
handlebars-iron = {version = "^0.17.0", features=["serde_type"], default-feature=false}
iron = "^0.4.0"
params = "^0.3.0"
serde_json = "^0.7.0"

[dev-dependencies]
router = "^0.2.0"

[package.metadata.release]
sign-commit = true
upload-doc = true
